{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "FlightControls",
            "id": "195790f8-b936-45be-be44-3ccac0a67b23",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2f8b7908-b7aa-450b-9f9a-66bdd5a5b92d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b9cc17d-1f56-48c6-985c-e036b98569e5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildingControls",
            "id": "b813089c-be60-486a-abd3-cdda3ece5983",
            "actions": [
                {
                    "name": "DragAndMove",
                    "type": "Value",
                    "id": "d8b1b20f-0b20-4d54-8854-23a838b98315",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "698b1599-76fd-4c14-a601-ef4a7c6a3c9f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragAndMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ManagementControls",
            "id": "06e543aa-7f31-4c09-b13f-fb90fc010d47",
            "actions": [
                {
                    "name": "SwitchBuildFly",
                    "type": "Button",
                    "id": "172fcace-ab5d-4cef-adec-8125509092d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93ce0b80-1666-427f-946d-2827dc28e841",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchBuildFly",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}